/api/posts -> post methods
